use spirv-cross to compile to MSL

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 	path = dependencies/metal-cpp
 	url = https://github.com/bkaradzic/metal-cpp.git
 	shallow = true
+[submodule "dependencies/SPIRV-Cross"]
+	path = dependencies/SPIRV-Cross
+	url = https://github.com/KhronosGroup/SPIRV-Cross.git
